RESOLVED FIXED120892
[WK2] [GTK] LayerTreeHostGtk: don't set m_isValid to false if glContext() returns null
https://bugs.webkit.org/show_bug.cgi?id=120892
Summary [WK2] [GTK] LayerTreeHostGtk: don't set m_isValid to false if glContext() ret...
Alberto Garcia
Reported 2013-09-06 13:21:59 PDT
This is a follow-up to bug 117733. If the glContext() call in LayerTreeHostGtk::initialize() returns null, m_isValid is set to false, which breaks an assertion in invalidate(). It's not necessary to set m_isValid here, the rest of the code already deals with the case where glContext() is null so that can be safely removed. The m_isValid variable is otherwise relevant in this class since it checks that invalidate() is called once before the object is destroyed.
Attachments
Patch (1.59 KB, patch)
2013-09-06 13:24 PDT, Alberto Garcia
mrobinson: review+
Alberto Garcia
Comment 1 2013-09-06 13:24:37 PDT
Alberto Garcia
Comment 2 2013-09-11 09:14:40 PDT
Note You need to log in before you can comment on or make changes to this bug.